--- a/template/uetke/templates/static_pages/advancedpythonforthelab.html
+++ b/template/uetke/templates/static_pages/advancedpythonforthelab.html
@@ -67,6 +67,5 @@
       </div>
     </div>
   </div>
-  <!-- Features -->
-{% include "courses_offer.html" %}
+{% include "static_pages/courses_offer.html" %}
 {% endblock %}
