--- a/template/uetke/templates/static_pages/courses_offer.html
+++ b/template/uetke/templates/static_pages/courses_offer.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="pb-3 text-secondary">What our courses offer</h1>
+          <h1 class="pb-3 text-secondary">Our courses</h1>
         </div>
       </div>
       <div class="row">
