--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -17,13 +17,13 @@
   <!-- PAGE settings -->
   <link rel="icon" href="{{ SITEURL }}/theme/img/Logo_Only_U.jpg">
   <title>{{ SITENAME }} | {% block title %}{% endblock %}</title>
-  <meta name="description" content="{% block description %}{% endblock %}">
+  <meta name="description" content="{% block description %}Uetke specializes in developing software for scientific research. We also offer trainings and coaching{% endblock %}">
   <meta name="keywords" content="Python, Software, Science, Research, User Interface, GUI, {% block keywords %}{% endblock %}">
   <!-- Open Graph Descriptions -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.uetke.com/"/>
-  <meta property="og:title" content="Software For Science" />
-  <meta property="og:description" content="Uetke specializes in developing software for scientific research. We also offer trainings and coaching." />
+  <meta property="og:url" content="{% block og_url %}{{ SITEURL }}{% endblock %}"/>
+  <meta property="og:title" content="{% block og_title %}Software For Science{% endblock %}" />
+  <meta property="og:description" content="{% block og_description %}Uetke specializes in developing software for scientific research. We also offer trainings and coaching{% endblock %}" />
   {% block meta_content %}{% endblock %}
   <!-- CSS dependencies -->
   <link href="{{ SITEURL }}/theme/css/pygment.css" rel="stylesheet">
@@ -72,7 +72,7 @@ window.cookieconsent.initialise({
       <a class="navbar-brand" href="/">
         <img src="{{ SITEURL }}/theme/img/Uetke_Logo.png" width="" height="" class="d-inline-block align-top" alt=""> </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-      <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+      <div class="collapse navbar-collapse text-right justify-content-end" id="navbar2SupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
             <a class="btn btn-light" href="{{ SITEURL }}/courses">Courses</a>
