--- a/template/uetke/templates/static_pages/gitforscientists.html
+++ b/template/uetke/templates/static_pages/gitforscientists.html
@@ -20,27 +20,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead">There are many tools from which scientists can benefit. Git is perhaps the most useful one that gets too often overlooked.</p>
-          <p class="">This course is aimed at groups of 10 people who are willing to learn how to achieve a proper workflow and how to collaborate.</p>
-          <p class="">Git is useful not only for developing programs but to work in teams. Learn from real-world examples.</p>
+          <p class="lead">There are many tools from which scientists can benefit, and Git version control is perhaps the most useful one.</p>
+          <p class="">The course <em>Git for Scientists</em> is aimed at groups of up to 10 people who are willing to learn how to achieve a proper workflow and how to collaborate on projects.</p>
+          <p class="">Git is useful not only for developing programs but to work in teams. Learn by doing from real-world examples.</p>
+          <p>We are focussing completely on Git best practices, no programming knowledge is required for this course.</p>
         </div>
         <dic class="col-md-4 col-lg-6 d-none d-md-block" style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
       </div>
-      <hr class="mt-0"> </div>
+    </div>
   </div>
-  <!-- Features -->
-  <div class="py-5" id="features">
+  <!-- Syllabus -->
+  <div class="py-2 mb-3" id="features">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="pb-4 text-left">Syllabus</h1>
+          <h1 class="pb-2 text-left">Syllabus</h1>
           <p class="lead text-left">Git for scientists will teach you how to exploit a tool that will help you collaborate, track your changes and document your code.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="">The open source community has quickly shifted to Github to host their projects. The same technology that powers collaborations among big, decentralized teams can be powering also your research organization.</p>
-          <p class="" contenteditable="true">What you are going to learn:</p>
+          <p class="">The open source community has quickly shifted to Github to host their projects. The same technology that powers collaborations among big, decentralized teams, can be powering also your research organization. It doesn't matter if you are a big or a small team, proper use of version control makes your work more efficient and less prone to error.</p>
+          <p class="">What you are going to learn:</p>
           <ul>
             <li>Start your own Git project</li>
             <li>Configure remotes</li>
@@ -62,33 +63,23 @@
       </div>
     </div>
   </div>
-  <div class="py-5">
+  <!-- Nex Courses -->
+  <div class="py-2">
     <div class="container">
       <div class="row">
-        <div class="col-md-3"></div>
         <div class="col-md-6">
-          <h3>Next courses</h3>
-          <p class="my-3 lead">There are no courses planned at the moment.</p>
-          <p class="">If you are interested in a course, drop us an e-mail to <a href="mailto:courses@uetke.com">courses@uetke.com</a> or fill the form below. </p>
+          <h4>Next courses</h4>
+          <p class="my-3">April session: Tuesday 17th and Monday 23rd.</p>
+          <p class="">If you are interested in a course, drop us an e-mail to <a href="mailto:courses@uetke.com">courses@uetke.com</a> or <a href="{{ SITEURL }}/courses/register">register</a>. </p>
         </div>
-        <div class="col-md-3"></div>
-      </div>
-    </div>
-  </div>
- <!-- Location -->
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-cs-12">
-          <img class="d-block img-fluid float-left rounded" src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyByJ-myQrLo6jY5sDtMWYE3ejAhzC64I4s&amp;markers=Meet+Berlage&amp;center=Meet+Berlage&amp;zoom=15&amp;size=640x480&amp;sensor=false"> </div>
-        <div class="col-md-4 col-xs-12">
-          <h1 class="">Our Location</h1>
-          <p class="lead">Our courses are given at <b style="font-weight: bold;">Meet Berlage</b>, a great location just 5 minutes away from Amsterdam Centraal</p>
-          <p class="">Do you prefer a course at your own location? Drop us a line at courses@uetke.com or through the form below.
-            <br> </p>
+        <div class="col-md-6">
+          <h4>What will you get</h4>
+          <p>For <b>350€</b>, Git for Scientists is the most affordable course in Amsterdam. You will learn how to work with version control, in teams, and with the most useful resources. The course is aimed at scientists, but everyone is welcome to join; contact us if you are in doubt.</p>
+          <p>The courses are two full days, from 10 am to 5 pm, and <b>lunch is included</b>. Please bring your own laptop; if you don't own one, let us know in advance and we can arrange something for you.</p>
         </div>
       </div>
     </div>
-  </div>
-{% include "courses_offer.html" %}
+  </div> <!-- Nex Courses -->
+{% include "static_pages/courses_location.html" %}
+{% include "static_pages/courses_offer.html" %}
 {% endblock %}
