Added twitter info to the header

--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -25,6 +25,10 @@
   <meta property="og:title" content="{% block og_title %}Software For Science{% endblock %}" />
   <meta property="og:description" content="{% block og_description %}Uetke specializes in developing software for scientific research. We also offer trainings and coaching{% endblock %}" />
   {% block meta_content %}{% endblock %}
+  <!-- Twitter Meta Descriptions -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@uetke" />
+  <meta name="twitter:creator" content="@_aquic_">
   <!-- CSS dependencies -->
   <link href="{{ SITEURL }}/theme/css/pygment.css" rel="stylesheet">
   <link rel="stylesheet" href="{{ SITEURL }}/theme/css/fontawesome.min.css" type="text/css">
