--- a/template/uetke/templates/static_pages/about_us.html
+++ b/template/uetke/templates/static_pages/about_us.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}This is who we are{% endblock %}
+{% block description %}Uetke is a project from scientist for scientists.{% endblock %}
+{% block keywords %}Physics, Science, Consulting, Programming, Coaching{% endblock %}
 
-</body>
-</html>
+{% block content %}
+
+<div class="container mt-5 pt-5">
+  <div class="row">
+    <div class="col-md-4">
+      <h3>About Me</h3>
+    </div>
+    <div class="row">
+      <div class="col-md-4 col-md-push-7"><img src="{{ SITEURL }}/theme/img/Aquiles_Carattino.jpg" class="img-fluid"></div>
+      <div class="col-md-6" style="font-size: smaller">
+      <p>My name is <b>Aquiles Carattino</b>, I am a freelance software developer for research laboratories. While doing my Ph.D. at Leiden University under the supervision of Prof. Michel Orrit, I've come to realize the impact that better software could have on my own experiments. Most of the results of my thesis were achieved thanks to having the proper equipment and more importantly, adequate programs.</p>
+        <p>After my Ph.D., I started developing software for laboratories and found out that most of the users of my own programs couldn't understand them. The main issue was that they couldn't develop any further what I was leaving behind.</p>
+        <p>In order to fill the knowledge gap, I have built a series of courses around my own experience both as a Ph.D. candidate and as a software developer. The courses are aimed at empowering young researchers with tools that can have a lasting impact on their careers. </p>
+        <p>You can find more about myself on: <a href="https://www.linkedin.com/in/aquic">LinkedIn</a>, <a href="https://github.com/aquilesC/">Github</a>, <a href="https://www.aquicarattino.com">My Blog</a>, <a href="https://scholar.google.nl/citations?user=sXoXTQcAAAAJ&hl=en">Google Scholar</a>.</p>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <p class="lead">Contact Me</p>
+        <p>I am always willing to talk about Python, programming, and science in general. If you have any ideas or just want to have a chat, the best is to drop me an e-mail to <a href="mailto:aquiles@uetke.com">aquiles@uetke.com</a>.</p>
+        <p>I am currently living in Amsterdam, The Netherlands. If you are close enough we can meet up to discuss.</p>
+        <p>You can also fill in the form below and I will get back to you as soon as possible.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
