Made RSS full article. Change wording in projects

--- a/template/uetke/templates/static_pages/main.html
+++ b/template/uetke/templates/static_pages/main.html
@@ -32,7 +32,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Network Control</h6>
                   <p class="card-text">Control devices through the network in an easy and customizable way. Don't need to depend on one computer</p>
-                  <a href="{{ SITEURL }}/projects/network-control" class="btn btn-primary">Check it</a>
+                  <a href="{{ SITEURL }}/projects/network-control" class="btn btn-primary">Read more</a>
                 </div>
               </div>
             </div>
@@ -42,7 +42,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Optical Tweezers</h6>
                   <p class="card-text">Quickly visualize data from an optical trap. It allows fast acquisition and customizable control.</p>
-                  <a href="{{ SITEURL }}/projects/optical-tweezers" class="btn btn-primary">Check it</a>
+                  <a href="{{ SITEURL }}/projects/optical-tweezers" class="btn btn-primary">Read more</a>
                 </div>
               </div>
             </div>
@@ -52,7 +52,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Camera Acquisition</h6>
                   <p class="card-text">Real-time tracking and flexible platform for camera acquisition. Achieve frame rates in the range of the kHz.</p>
-                  <a href="{{ SITEURL }}/projects/camera-acquisition" class="btn btn-primary">Check it</a>
+                  <a href="{{ SITEURL }}/projects/camera-acquisition" class="btn btn-primary">Read more</a>
                 </div>
               </div>
             </div>
@@ -62,7 +62,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Documentation</h6>
                   <p class="card-text">All our projects are shiped with beautiful documentation for you to keep developing and customizing</p>
-                  <a href="http://uutrack.readthedocs.io/en/latest/" target="_blank" class="btn btn-primary">Read The Docs</a>
+                  <a href="http://uutrack.readthedocs.io/en/latest/" target="_blank" class="btn btn-primary">Read more</a>
                 </div>
               </div>
             </div>
