--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -78,14 +78,17 @@ window.cookieconsent.initialise({
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse text-right justify-content-end" id="navbar2SupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item mx-2">
+          <li class="nav-item mx-1">
             <a class="btn btn-light" href="{{ SITEURL }}/courses">Courses</a>
           </li>
-          <li class="nav-item mx-2">
+          <li class="nav-item mx-1">
             <a class="btn btn-light" href="{{ SITEURL }}/blog">Blog</a>
           </li>
-          <li class="nav-item mx-2">
-            <a class="btn btn-light" href="{{ SITEURL }}/contact">Contact Us</a>
+          <li class="nav-item mx-1">
+            <a class="btn btn-light" href="{{ SITEURL }}/about-us">About Us</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="btn btn-light" href="{{ SITEURL }}/contact">Contact</a>
           </li>
         </ul>
       </div>
