Review template and text

--- a/template/uetke/static/css/uetke.css
+++ b/template/uetke/static/css/uetke.css
@@ -4,6 +4,14 @@
   background-size: cover;
 }
 
+.big-header h1{
+    padding: 0.75rem;
+}
+
+.entry-content p{
+    text-align: justify;
+}
+
 .main-title{
     font-size: 2.9rem;
 }
