--- a/template/uetke/templates/static_pages/courses.html
+++ b/template/uetke/templates/static_pages/courses.html
@@ -20,14 +20,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead">The aim of the courses is to show that anybody can build software for the lab. Our intensive 3-day courses cover the basics of working with Python to distributing packages with built-in documentation.&nbsp; </p>
-          <p class="">Developing control software for labs with Python is becoming ubiquitous in all major research institutes around the world. Learn from real-world cases, with real devices and measurements. The courses are aimed at small groups of 5 people in order
+          <p class="lead text-justify">The aim of the courses is to show that anybody can build software for the lab. Our intensive 3-day courses cover the basics of working with Python to distributing packages with built-in documentation.&nbsp; </p>
+          <p class="text-justify">Developing control software for labs with Python is becoming ubiquitous in all major research institutes around the world. Learn from real-world cases, with real devices and measurements. The courses are aimed at small groups of 5 people in order
             to deliver personalized content to every attendant.&nbsp;</p>
-          <p class="">Do you want to have a personalized course according to the specific needs of your lab? We can work something out together, drop us a line: courses@uetke.com</p>
+          <p class="text-justify">Do you want to have a personalized course according to the specific needs of your lab? We can work something out together, drop us a line: courses@uetke.com</p>
         </div>
         <div class="col-lg-6 d-none d-md-block col-md-4" style="background-image: url('{{ SITEURL }}/theme/img/apple-desk-laptop-working_2.jpg');background-size:cover;background-repeat:no-repeat;background-position:right center;"></div>
       </div>
-      <hr class="mt-0"> </div>
+    </div>
   </div>
   <!-- Offer -->
   <div class="py-md-3" id="courses">
@@ -42,7 +42,7 @@
           <div class="row">
             <div class="col-md-12">
               <h5 class="">Our courses are ideal for young Ph.D. candidates and postdocs who want to gain control of their own experiments.&nbsp;</h5>
-              <p class="lead text-left">The courses are aimed at participants who are comfortable analyzing data with Python or Matlab. If you already know how to open and read files, how to iterate over an array and write an if-statement, then you are ready to join. The course
+              <p class="text-justify">The courses are aimed at participants who are comfortable analyzing data with Python or Matlab. If you already know how to open and read files, how to iterate over an array and write an if-statement, then you are ready to join. The course
                 is hands-on from the first moment; you will receive a real device on the first day and by the end of the third day you will have an amazing user interface for interacting with it. While the course progresses you can keep the device to
                 practice at home or in the office.</p>
               <h6 class="">Important: You should bring your own laptop to the course.</h6>
