--- a/template/uetke/templates/static_pages/courses_location.html
+++ b/template/uetke/templates/static_pages/courses_location.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-cs-12">
-          <img class="d-block img-fluid float-left rounded" src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyByJ-myQrLo6jY5sDtMWYE3ejAhzC64I4s&amp;markers=Meet+Berlage&amp;center=Meet+Berlage&amp;zoom=15&amp;size=640x480&amp;sensor=false"> </div>
+          <img class="d-block img-fluid float-left rounded" src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyByJ-myQrLo6jY5sDtMWYE3ejAhzC64I4s&markers=Meet+Berlage&center=Meet+Berlage&zoom=15&size=640x480&sensor=false"> </div>
         <div class="col-md-4 col-xs-12">
           <h1 class="">Our Location</h1>
           <p class="lead">Our courses are given at <b style="font-weight: bold;">Meet Berlage</b>, a great location just 5 minutes away from Amsterdam Centraal Station</p>
