--- a/template/uetke/templates/static_pages/main.html
+++ b/template/uetke/templates/static_pages/main.html
@@ -21,6 +21,7 @@
       <div class="heading">
         <div class="col-md-12">
           <h1 class="text-center">Projects</h1>
+          <h3 class="text-center">Latest developments we have worked on</h3>
         </div>
       </div>
       <div class="row py-5">
@@ -71,15 +72,13 @@
       </div>
       <div class="row">
         <div class="align-self-center col-lg-7 text-md-left text-center">
-          <h2>Works everywhere</h2>
-          <p class="my-4 text-muted">We use Python as our core development language. Run the software directly from your Linux, Windows or Mac PC. We use the same technology that supports desktop and mobile apps to achieve fast refresh rates and great visualization. Use the examples
-            from the code to expand your toolbox and develop based on what we deliver.</p>
-          <!-- <a class="btn shadowed btn-secondary" href="https://github.com/uetke/">Our code on Github</a> -->
+          <h2>Python Works Everywhere</h2>
+          <p class="my-4 text-muted text-justify">We use Python as our core development language. The software we develop runs in Linux, Windows or Mac PC. We use the same technology that supports desktop and mobile apps to achieve fast refresh rates, and great visualization. The code contains examples to help you expand your toolbox.</p>
         </div>
         <div class="align-self-center mt-5 col-lg-5 animate-in-right">
           <img class="img-fluid d-none d-md-block " src="{{ SITEURL }}/theme/img/iphone_ipad_light.jpg"> </div>
       </div>
-      <hr class="mt-0"> </div>
+     </div>
   </div>
   <!-- Features -->
   <div class="py-5" id="features">
@@ -89,17 +88,17 @@
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-4">
-              <h5 class="" contenteditable="true">Advanced Python for the Lab</h5>
-              <p class="lead text-left">Build an entire package; develop with users in mind and learn how to deploy. Focus into advance instruments, cameras and National Instruments DAQ</p>
+              <h5 class="">Advanced Python for the Lab</h5>
+              <p class="lead text-justify">Build an entire package; develop with users in mind and learn how to deploy. Focus into advanced instruments, cameras and National Instruments DAQ.</p>
             </div>
             <div class="col-md-4">
-              <h5 class="" contenteditable="true">Python for the Lab</h5>
-              <p class="lead text-left">Learn everything you need to start controlling devices from your computer. Automatize tasks, improve your statistics and build User Interfaces
+              <h5 class="">Python for the Lab</h5>
+              <p class="lead text-justify">Learn everything you need to start controlling devices from your computer. Automatize tasks, improve your statistics and build User Interfaces.
                 <br> </p>
             </div>
             <div class="col-md-4">
-              <h5 class="" contenteditable="true">Working with Git</h5>
-              <p class="lead text-left">Git is a core resource for working in laboratories. Keep track of your documents and your software. Learn how to document your Python projects</p>
+              <h5 class="">Working with Git</h5>
+              <p class="lead text-justify">Git is a core resource for working in laboratories. Keep track of your documents and your software. Learn how to document your Python projects.</p>
             </div>
           </div>
           <div class="row">
