Improved the landing page; services at the top, then courses and projects. No more carrousel

--- a/template/uetke/templates/static_pages/about_us.html
+++ b/template/uetke/templates/static_pages/about_us.html
@@ -13,10 +13,10 @@
     <div class="row">
       <div class="col-md-4 col-md-push-7"><img src="{{ SITEURL }}/theme/img/Aquiles_Carattino.jpg" class="img-fluid"></div>
       <div class="col-md-6" style="font-size: smaller">
-      <p>My name is <b>Aquiles Carattino</b>, I am a freelance software developer for research laboratories. While doing my Ph.D. at Leiden University under the supervision of Prof. Michel Orrit, I've come to realize the impact that better software could have on my own experiments. Most of the results of my thesis were achieved thanks to having the proper equipment and more importantly, adequate programs.</p>
-        <p>After my Ph.D., I started developing software for laboratories and found out that most of the users of my own programs couldn't understand them. The main issue was that they couldn't develop any further what I was leaving behind.</p>
-        <p>In order to fill the knowledge gap, I have built a series of courses around my own experience both as a Ph.D. candidate and as a software developer. The courses are aimed at empowering young researchers with tools that can have a lasting impact on their careers. </p>
-        <p>You can find more about myself on: <a href="https://www.linkedin.com/in/aquic">LinkedIn</a>, <a href="https://github.com/aquilesC/">Github</a>, <a href="https://www.aquicarattino.com">My Blog</a>, <a href="https://scholar.google.nl/citations?user=sXoXTQcAAAAJ&hl=en">Google Scholar</a>.</p>
+      <p class="text-justify">My name is <b>Aquiles Carattino</b>, I am a freelance software developer for research laboratories. While doing my Ph.D. at Leiden University under the supervision of Prof. Michel Orrit, I've come to realize the impact that better software could have on my own experiments. Most of the results of my thesis were achieved thanks to having the proper equipment and more importantly, adequate programs.</p>
+        <p class="text-justify">After my Ph.D., I started developing software for laboratories and found out that most of the users of my own programs couldn't understand them. The main issue was that they couldn't develop any further what I was leaving behind.</p>
+        <p class="text-justify">In order to fill the knowledge gap, I have built a series of courses around my own experience both as a Ph.D. candidate and as a software developer. The courses are aimed at empowering young researchers with tools that can have a lasting impact on their careers. </p>
+        <p class="text-justify">You can find more about myself on: <a href="https://www.linkedin.com/in/aquic">LinkedIn</a>, <a href="https://github.com/aquilesC/">Github</a>, <a href="https://www.aquicarattino.com">My Blog</a>, <a href="https://scholar.google.nl/citations?user=sXoXTQcAAAAJ&hl=en">Google Scholar</a>.</p>
       </div>
     </div>
     <div class="row justify-content-center">
